--- a/client/client_admin/package.json
+++ b/client/client_admin/package.json
@@ -18,7 +18,8 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "ukm-components-vue3": "^1.0.5",
     "ukm-spa": "^1.0.9",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vuetify": "^3.6.4"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
