--- a/client/client_search/package.json
+++ b/client/client_search/package.json
@@ -19,8 +19,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/jquery": "^3.5.14",
+    "@types/lodash": "^4.17.4",
     "chart.js": "^2.7.3",
     "jquery": "^3.6.1",
+    "lodash": "^4.17.21",
     "ukm-spa": "^1.0.9",
     "vue": "^2.5.2",
     "vue-class-component": "^6.0.0",
